# python-poetry-docker

./: Dockerfile  README.md  main.py  pip.conf  pyproject.toml
